--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "loader-utils": "3.2.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
