--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "loader-utils": "3.2.1",
     "localforage": "^1.10.0",
