--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "loader-utils": "3.2.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
